<resources>
    <string name="app_name">JeetseMeet</string>
    <string name="sign_in_your_account">Sign in your account</string>
    <string name="email_adresini_girin">Email adresini girin.</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="password_girin">Password girin.</string>
    <string name="welcome_to_jitsi_meet">Welcome To Jitsi Meet</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="we_need_a_few_details_to_get_your_account_ready">We need a few details to get your account ready</string>
    <string name="ifrenizi_giriniz">Şifrenizi giriniz.</string>
    <string name="ifrenizi_tekrarlay_n">Şifrenizi tekrarlayın</string>
    <string name="ifrenizi_tekrar_giriniz">Şifrenizi tekrar giriniz.</string>
    <string name="email_adresinizi_girin">Email adresinizi girin</string>
    <string name="ifreniz">Şifreniz</string>
    <string name="soyad_n_z_girin">Soyadınızı girin</string>
    <string name="soyad_n_z">Soyadınız</string>
    <string name="ad_n_z_girin">Adınızı girin</string>
    <string name="ad_n_z">Adınız</string>
</resources>